<!--
Lushi Cao
301011302
COMP304 SEC002
-->
<resources>
    <string name="app_name">LushiLab4</string>
    <string name="tab_text_1">My Patients</string>
    <string name="tab_text_2">All Patients</string>
    <string-array name="departments">
        <item>Allergy</item>
        <item>Blood Lab</item>
        <item>Nerosurgery</item>
        <item>Orthopedic</item>
    </string-array>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender\u0020</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="patient_id">Patient ID\u0020</string>
    <string name="age">Age\u0020</string>
    <string name="room">Room\u0020</string>
    <string name="department">Department</string>
    <string name="add_patient">Add Patient</string>
    <string name="select_patient">Select Patient</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="enter_blood_pressure">Enter blood pressure</string>
    <string name="respiratory_rate">Respiratory Rate</string>
    <string name="enter_respiratory_rate_bpm">Enter respiratory rate (bpm)</string>
    <string name="blood_oxygen_level">Blood oxygen level</string>
    <string name="enter_blood_oxygen_level">Enter Blood Oxygen Level (%)</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="enter_heart_rate_bpm">Enter heart rate (bpm)</string>
    <string name="covid_19">COVID-19</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="test_date">Test Date</string>
    <string name="select_date">Select date</string>
    <string name="add_test">Add Test</string>
    <string name="start_here">Start Here</string>
    <string name="search_patient_id">Search by patient ID</string>
    <string name="enter_patient_id">Enter patient ID</string>
    <string name="filter_by_department">Filter by Department</string>
    <string name="enter_valid_fn">Enter a valid first name</string>
    <string name="enter_valid_ln">Enter a valid last name</string>
    <string name="enter_valid_age">Enter valid age</string>
    <string name="nonempty_field">Field cannot be empty</string>
    <string name="new_patient_added">New patient added:\u0020</string>
    <string name="new_test_added">New test added for\u0020</string>
    <string name="patient_not_exist">Patient does not exist, please re-enter</string>
    <string name="record_deleted">Test record deleted</string>
    <string name="swipe_delete">Swipe left to delete a record</string>
    <string name="home_intro">eHealth Clinic is responding to COVID-19 by taking temporary measures to protect the safety of our patients, family members, and staff, and finding new ways to support our community. </string>
    <string name="covid_19_information">\u0020COVID-19 INFORMATION</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_room">Enter room</string>
    <string name="blood_oxygen">Blood Oxygen</string>
    <string name="invalid_input">Invalid input, try again</string>
</resources>