<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/searchLayout"
    tools:context=".fragment.LushiFragmentSearch">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_patient_id" />

    <EditText
        android:id="@+id/lushiSearchByIdET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_patient_id" />

    <Button
        android:id="@+id/lushiSearchByIdBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_patient_id" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_by_department" />

    <Spinner
        android:id="@+id/lushiSearchDeptSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/searchByDeptBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_by_department" />

</LinearLayout>